[package]
name = "dreaming"
version = "0.1.0"
edition = "2021"
authors = ["Ignacio Brasca <warkanlock@gmail.com>"]
license = "MIT"
description = "An interactive, terminal-based dream journal application."
homepage = "https://github.com/Warkanlock/dreaming"
repository = "https://github.com/Warkanlock/dreaming"
documentation = "https://github.com/Warkanlock/dreaming/blob/master/README.md"
keywords = ["dream", "journal", "tui", "rust"]
categories = ["applications::terminal", "productivity"]

[dependencies]
crossterm = "0.26"
ratatui = { version = "0.20", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
